UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Phoenix_Bright_Exceptions__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Class__c</fullName>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_User__c</fullName>
        <label>Current User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Issue_Status__c</fullName>
        <label>Issue Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Method_Name__c</fullName>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Occurrence_Time__c</fullName>
        <label>Occurrence Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phoenix_Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Bright Exceptions</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Occurrence_Time__c</columns>
        <columns>Phoenix_Class__c</columns>
        <columns>Phoenix_Method_Name__c</columns>
        <columns>Phoenix_Error_Message__c</columns>
        <columns>Phoenix_Issue_Status__c</columns>
        <columns>Phoenix_Stack_Trace__c</columns>
        <columns>Phoenix_Current_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Class__c</field>
            <operation>notEqual</operation>
            <value>CustomerProductActiveContractsBatchCls</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Exception-{0000000000}</displayFormat>
        <label>Bright Exceptions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bright Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>